--- a/schedmd/slurm/25.05/rockylinux9/Dockerfile.pyxis
+++ b/schedmd/slurm/25.05/rockylinux9/Dockerfile.pyxis
@@ -101,6 +101,10 @@ dnf -q -y install --setopt='install_weak_deps=False' \
 dnf clean all
 EOR
 
+# Ensure OpenMPI environment variables are set
+ENV PATH="/usr/local/bin:$PATH"
+ENV LD_LIBRARY_PATH="/usr/local/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"
+
 ################################################################################
 # SLURM: login-pyxis
 # BUILD: `docker build --target=login-pyxis -t [<registry>/]login-pyxis:<tag> .`
@@ -154,3 +158,7 @@ dnf -q -y install --setopt='install_weak_deps=False' \
   nvidia-container-toolkit
 dnf clean all
 EOR
+
+# Ensure OpenMPI environment variables are set
+ENV PATH="/usr/local/bin:$PATH"
+ENV LD_LIBRARY_PATH="/usr/local/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"
