fix: replace OpenMPI build with package manager
Replace OpenMPI 5.0.8 source compilation with distribution packages
to reduce container size and maintenance overhead while preserving
PMIx and Slurm integration.

- Ubuntu 24.04: OpenMPI 4.1.6 via apt packages
- Rocky Linux 9: OpenMPI 4.1.1 via dnf packages
- Remove build dependencies and custom environment setup

--- a/schedmd/slurm/25.05/rockylinux9/Dockerfile
+++ b/schedmd/slurm/25.05/rockylinux9/Dockerfile
@@ -8,10 +8,6 @@ ARG SLURM_VERSION=25.05-latest
 ARG SLURM_DIR="slurm-${SLURM_VERSION}"
 ARG PARENT_IMAGE=rockylinux:9
 
-# OpenMPI build arguments
-ARG OPENMPI_VERSION="5.0.8"
-ARG OPENMPI_CONFIGURE_OPTIONS="--with-pmix --with-slurm --enable-shared --disable-static"
-
 ################################################################################
 FROM alpine:latest AS slurm-src
 
@@ -124,33 +120,17 @@ EOR
 
 # Install OpenMPI with PMIx support
 RUN <<EOR
-# Install OpenMPI build dependencies
+# Install OpenMPI via package manager
 set -xeuo pipefail
 dnf -q -y install --setopt='install_weak_deps=False' \
-  gcc gcc-c++ make wget \
-  pmix-devel hwloc-devel libevent-devel openssl-devel \
-  zlib-devel flex
+  openmpi openmpi-devel \
+  pmix-devel
 dnf clean all
 EOR
 
-RUN <<EOR
-# Build and install OpenMPI
-set -xeuo pipefail
-cd /tmp
-wget -q https://download.open-mpi.org/release/open-mpi/v5.0/openmpi-${OPENMPI_VERSION}.tar.gz
-tar -xzf openmpi-${OPENMPI_VERSION}.tar.gz
-cd openmpi-${OPENMPI_VERSION}
-./configure --prefix=/usr/local ${OPENMPI_CONFIGURE_OPTIONS}
-make -j$(nproc)
-make install
-ldconfig
-cd /tmp
-rm -rf openmpi-${OPENMPI_VERSION}*
-EOR
-
-# Set OpenMPI environment variables
-ENV PATH="/usr/local/bin:$PATH"
-ENV LD_LIBRARY_PATH="/usr/local/lib${LD_LIBRARY_PATH:+:$LD_LIBRARY_PATH}"
+# Set OpenMPI environment variables for all container contexts
+ENV PATH="/usr/lib64/openmpi/bin:${PATH}"
+ENV LD_LIBRARY_PATH="/usr/lib64/openmpi/lib"
 
 ################################################################################
 # SLURM: slurmctld
