--- a/schedmd/slurm/master/rockylinux9/Dockerfile.pyxis
+++ b/schedmd/slurm/master/rockylinux9/Dockerfile.pyxis
@@ -80,6 +80,13 @@ mkdir -m 644 -p /etc/slurm/plugstack.conf.d/
 ln -s /usr/share/pyxis/pyxis.conf /etc/slurm/plugstack.conf.d/pyxis.conf
 EOR
 
+# Add NVIDIA proc mount fix for GPU compute nodes
+RUN <<EOR
+# Prepend proc mount fix to existing entrypoint
+set -xeuo pipefail
+sed -i '2i mount -t proc none /proc 2>/dev/null || true' /usr/local/bin/entrypoint.sh
+EOR
+
 ADD https://raw.githubusercontent.com/NVIDIA/enroot/refs/tags/v${ENROOT_VERSION}/conf/bash_completion /usr/share/bash-completion/completions/enroot
 ADD https://raw.githubusercontent.com/NVIDIA/enroot/refs/tags/v${ENROOT_VERSION}/conf/hooks/extra/50-mig-config.sh /etc/enroot/hooks.d/50-mig-config.sh
 ADD https://raw.githubusercontent.com/NVIDIA/enroot/refs/tags/v${ENROOT_VERSION}/conf/hooks/extra/50-sharp.sh /etc/enroot/hooks.d/50-sharp.sh
@@ -132,6 +139,13 @@ mkdir -m 777 -p /usr/share/enroot/enroot-data/
 mkdir -m 755 -p /run/enroot/
 mkdir -m 644 -p /etc/slurm/plugstack.conf.d/
 ln -s /usr/share/pyxis/pyxis.conf /etc/slurm/plugstack.conf.d/pyxis.conf
+EOR
+
+# Add NVIDIA proc mount fix for GPU compute nodes
+RUN <<EOR
+# Prepend proc mount fix to existing entrypoint
+set -xeuo pipefail
+sed -i '2i mount -t proc none /proc 2>/dev/null || true' /usr/local/bin/entrypoint.sh
 EOR
 
 ADD https://raw.githubusercontent.com/NVIDIA/enroot/refs/tags/v${ENROOT_VERSION}/conf/bash_completion /usr/share/bash-completion/completions/enroot
