--- a/schedmd/slurm/25.05/ubuntu24.04/Dockerfile
+++ b/schedmd/slurm/25.05/ubuntu24.04/Dockerfile
@@ -4,7 +4,7 @@
 
 ################################################################################
 
-ARG SLURM_VERSION=25.05-latest
+ARG SLURM_VERSION=25.05.2
 ARG SLURM_DIR="slurm-${SLURM_VERSION}"
 ARG PARENT_IMAGE=ubuntu:24.04
 
