docs: implements documentation for containers repo
Implements ReadTheDocs style documentation for repo

Changelog - added - Added documentation and ReadTheDocs config

--- a/.gitignore
+++ b/.gitignore
@@ -95,3 +95,9 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,macos,windows,visualstudiocode
+
+# Binary directory
+bin/*
+
+# Intellij Idea Workspace Config
+.idea/*
