feat(slurmd): add SSH support with pam_slurm_adopt
Similar to the login image: sshd is needed for SSH access; sssd is
needed for identity management.

Specific to slurmd images is configuring pam_slurm_adopt module.
Typically, configured to permit users onto the node if they have
running jobs.

Ref: https://slurm.schedmd.com/pam_slurm_adopt.html

Co-authored-by: Skyler Malinowski <skyler@schedmd.com>

--- a/schedmd/slurm/25.05/ubuntu24.04/Dockerfile
+++ b/schedmd/slurm/25.05/ubuntu24.04/Dockerfile
@@ -181,6 +181,8 @@ set -xeuo pipefail
 apt-get -qq update
 apt-get -qq -y install --no-install-recommends --fix-broken \
   gawk socat \
+  openssh-server \
+  authselect sssd sssd-ad sssd-ldap libpam-sss libnss-sss \
   ./slurm-smd-client_[0-9]*.deb \
   ./slurm-smd-client-dbgsym_[0-9]*.ddeb \
   ./slurm-smd-dev_[0-9]*.deb \
@@ -198,17 +200,22 @@ rm *.deb && rm *.ddeb
 mkdir -p /var/spool/slurmd/
 sed -i -E "s/^passwd:[[:space:]]+/&slurm /g" /etc/nsswitch.conf
 sed -i -E "s/^group:[[:space:]]+/&slurm /g" /etc/nsswitch.conf
+mkdir -p /etc/authselect
+authselect select sssd with-mkhomedir --force
+rm -f /etc/ssh/ssh_host_*
 EOR
 
 COPY files/etc/supervisor/supervisord.conf /etc/supervisor/
 COPY \
-  files/etc/supervisor/conf.d/slurmd.conf \
   files/etc/supervisor/conf.d/fakesystemd.conf \
+  files/etc/supervisor/conf.d/slurmd.conf \
+  files/etc/supervisor/conf.d/sshd.conf \
+  files/etc/supervisor/conf.d/sssd.conf \
   /etc/supervisor/conf.d/
 COPY files/usr/local/bin/fakesystemd.sh /usr/local/bin/
 COPY files/usr/local/bin/slurmd-entrypoint.sh /usr/local/bin/entrypoint.sh
 
-EXPOSE 6818/tcp
+EXPOSE 6818/tcp 22/tcp
 ENTRYPOINT ["entrypoint.sh"]
 
 ################################################################################
