feat: switch to official rockylinux/rockylinux images
The rockylinux registry is managed by dockerhub. The
rockylinux/rockylinux registry is managed by the Rocky Linux foundation.

--- a/schedmd/slurm/master/rockylinux9/Dockerfile
+++ b/schedmd/slurm/master/rockylinux9/Dockerfile
@@ -6,7 +6,7 @@
 
 ARG SLURM_VERSION=master
 ARG SLURM_DIR=slurm
-ARG PARENT_IMAGE=rockylinux:9
+ARG PARENT_IMAGE=rockylinux/rockylinux:9
 
 ################################################################################
 FROM alpine:latest AS slurm-src
