fix: use correct tar name for tracking version

--- a/schedmd/slurm/25.11/rockylinux9/Dockerfile
+++ b/schedmd/slurm/25.11/rockylinux9/Dockerfile
@@ -4,7 +4,7 @@
 
 ################################################################################
 
-ARG SLURM_VERSION=25.11
+ARG SLURM_VERSION=25.11-latest
 ARG SLURM_DIR=slurm
 ARG PARENT_IMAGE=rockylinux:9
 
