--- a/schedmd/slurm/25.11/rockylinux9/files/etc/supervisord.d/fakesystemd-slurm.ini
+++ b/schedmd/slurm/25.11/rockylinux9/files/etc/supervisord.d/fakesystemd-slurm.ini
@@ -1,10 +1,9 @@
 # SPDX-FileCopyrightText: Copyright (C) SchedMD LLC.
 # SPDX-License-Identifier: Apache-2.0
 
-[program:sackd]
+[program:fakesystemd]
 environment=NOTIFY_SOCKET="/tmp/fakesystemd.sock"
-command=bash -xc "exec /usr/sbin/sackd --systemd %(ENV_SACKD_OPTIONS)s"
-directory=/run/slurm
+command=/usr/local/bin/fakesystemd.sh
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
