--- a/schedmd/slurm/master/ubuntu24.04/files/etc/supervisor/conf.d/sackd.conf
+++ b/schedmd/slurm/master/ubuntu24.04/files/etc/supervisor/conf.d/sackd.conf
@@ -3,9 +3,11 @@
 
 [program:sackd]
 environment=NOTIFY_SOCKET="/tmp/fakesystemd.sock"
-command=bash -xc "exec sackd --systemd %(ENV_SACKD_OPTIONS)s"
+command=bash -xc "exec /usr/sbin/sackd --systemd %(ENV_SACKD_OPTIONS)s"
+directory=/run/slurm
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 stopasgroup=true
+user=slurm
