--- a/schedmd/slurm/25.11/ubuntu24.04/files/etc/supervisor/conf.d/slurmctld.conf
+++ b/schedmd/slurm/25.11/ubuntu24.04/files/etc/supervisor/conf.d/slurmctld.conf
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [program:slurmctld]
+user=slurm
 environment=NOTIFY_SOCKET="/tmp/fakesystemd.sock"
 command=bash -xc "exec slurmctld --systemd %(ENV_SLURMCTLD_OPTIONS)s"
 stdout_logfile=/dev/stdout
