--- a/schedmd/slurm/master/rockylinux9/files/etc/supervisord.d/slurmctld.ini
+++ b/schedmd/slurm/master/rockylinux9/files/etc/supervisord.d/slurmctld.ini
@@ -2,6 +2,7 @@
 # SPDX-License-Identifier: Apache-2.0
 
 [program:slurmctld]
+user=slurm
 environment=NOTIFY_SOCKET="/tmp/fakesystemd.sock"
 command=bash -xc "exec slurmctld --systemd %(ENV_SLURMCTLD_OPTIONS)s"
 stdout_logfile=/dev/stdout
