feat: avoid cache invalidation for Slurm source fetch

--- a/schedmd/slurm/master/rockylinux9/Dockerfile
+++ b/schedmd/slurm/master/rockylinux9/Dockerfile
@@ -17,12 +17,14 @@ ARG SLURM_TAR="${SLURM_VERSION}"
 
 WORKDIR /workspace/
 
+RUN --mount=type=cache,target=/var/cache/apk,sharing=locked \
+  apk add -q --no-cache tar
+
 ADD https://github.com/SchedMD/slurm/archive/${SLURM_TAR}.tar.gz ${SLURM_VERSION}.tar.gz
 
 RUN --mount=type=cache,target=/var/cache/apk,sharing=locked <<EOR
 # Unpack Slurm Source
 set -xeuo pipefail
-apk add -q --no-cache tar
 mkdir -p ${SLURM_DIR}
 tar --strip-components=1 -zxvf ${SLURM_TAR}.tar.gz -C ${SLURM_DIR}
 rm ${SLURM_TAR}.tar.gz
